// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > shold match snapshot - screen 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Virginia
  </h1>
  <h3>
    R
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Ajedrez, Parchis, Tetris
  </p>
  <p>
    4
  </p>
  <h4>
    Activo
  </h4>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC-123","country":"España"}
  </p>
</div>
`;

exports[`MyAwesomeApp > shold match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Virginia
    </h1>
    <h3>
      R
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Ajedrez, Parchis, Tetris
    </p>
    <p>
      4
    </p>
    <h4>
      Activo
    </h4>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC-123","country":"España"}
    </p>
  </div>
</div>
`;
